<resources>
    <string name="app_name">LifeBand</string>
    <string name="gcm_sender_id">527909730825</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="ip_default">172.17.144.192</string>
    <string name="ip_key">KEY_PREF_IP</string>
    <string name="ip_title">IP Address</string>

    <string name="send_port_default">5005</string>
    <string name="send_port_key">KEY_PREF_PORT_SEND</string>
    <string name="send_port_title">Send Port</string>

    <string name="receive_port_default">6006</string>
    <string name="receive_port_key">KEY_PREF_PORT_RECEIVE</string>
    <string name="receive_port_title">Receive Port</string>

    <string name="name_default">NAME</string>
    <string name="name_key">KEY_PREF_NAME</string>
    <string name="name_title">Name</string>

    <string name="age_default">100</string>
    <string name="age_key">KEY_PREF_AGE</string>
    <string name="age_title">Age</string>
</resources>
